@@ -36,7 +36,7 @@ f = open('README.rst','rU')
 long_description = f.read()
 f.close()
 
-install_requires=['six', ]
+install_requires=['six>=1.4', ]
 dependency_links = []
 if os.environ.get("TRAVIS", False):
     # Travis CI run
